Update website icon
Ref: How to Favicon: Six files that fit most needs <https://tg.pe/nZL>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<title>2022 年資訊之芽 Python 班課程網站</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+	<link rel="icon" href="{{ site.url }}/favicon.ico" sizes="any">
+	<link rel="apple-touch-icon" href="{{ site.url }}/apple-touch-icon.png">
+	<link rel="manifest" href="{{ site.url }}/manifest.webmanifest">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="{{ site.url }}/css/main.css">
 </head>
 <body>
 	<div id="md-all">
