--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,9 +11,9 @@
 				<a class="dropdown-toggle" data-toggle="dropdown" >相關連結 <span class="caret"></span></a>
 				<ul class="dropdown-menu">
 					<li><a target="_blank" href="https://neoj.sprout.tw/group/45/">Online Judge</a></li>
-					<li><a target="_blank" href="/spt">資訊之芽官網</a></li>
-					<li><a target="_blank" href="/c2022">C 語法班</a></li>
-					<li><a target="_blank" href="/algo2022">Algo 算法班</a></li>
+					<li><a target="_blank" href="/spt/">資訊之芽官網</a></li>
+					<li><a target="_blank" href="/c2022/">C 語法班</a></li>
+					<li><a target="_blank" href="/algo2022/">Algo 算法班</a></li>
 				</ul>
 			</li>
 
@@ -21,7 +21,7 @@
 				<a class="dropdown-toggle" data-toggle="dropdown">歷年課程 <span class="caret"></span></a>
 				<ul class="dropdown-menu">
 					{% for year in (2016..2021) reversed %}
-						<li><a target="_blank" href="/py{{ year }}">Python {{ year }}</a></li>
+						<li><a target="_blank" href="/py{{ year }}/">Python {{ year }}</a></li>
 					{% endfor %}
 				</ul>
 			</li>
